--- a/ReproducibleResarchProject1.Rmd
+++ b/ReproducibleResarchProject1.Rmd
@@ -3,100 +3,118 @@ title: 'Reproducible Research-Course Project 1 '
 author: "Abdelmalek Mohamed"
 ---
 
-##Assignment Instructions
-1.Code for reading in the dataset and/or processing the data
-2.Histogram of the total number of steps taken each day
-3.Mean and median number of steps taken each day
-4.Time series plot of the average number of steps taken
-5.The 5-minute interval that, on average, contains the maximum number of steps
-6.Code to describe and show a strategy for imputing missing data
-7.Histogram of the total number of steps taken each day after missing values are imputed
-8.Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
-9.All of the R code needed to reproduce the results (numbers, plots, etc.) in the report
-
-
-##1
-##Code for reading in the dataset and/or processing the data
-```{r, echo = TRUE} 
+```{r, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 library(ggplot2)
-
-activity <- read.csv("/Users/savvy2/Documents/Reproducible research/activity.csv")
-
-activity$date <- as.POSIXct(activity$date, "%Y-%m-%d")
-weekday <- weekdays(activity$date)
-activity <- cbind(activity,weekday)
-
-summary(activity)
-```
-##2. mean total number of steps taken per day?
-```{r, echo = TRUE} 
-activity_total_steps <- with(activity, aggregate(steps, by = list(date), FUN = sum, na.rm = TRUE))
-names(activity_total_steps) <- c("date", "steps")
-hist(activity_total_steps$steps, main = "Total number of steps taken per day", xlab = "Total steps taken per day", col = "red", ylim = c(0,30), breaks = seq(0,25000, by=2500))
-```
-##3. mean and median of the total number of steps taken per day:
-```{r, echo = TRUE} 
-mean(activity_total_steps$steps)
-median(activity_total_steps$steps)
-```
-##4.Time series plot of the average number of steps taken
-```{r, echo = TRUE}
-average_daily_activity <- aggregate(activity$steps, by=list(activity$interval), FUN=mean, na.rm=TRUE)
-names(average_daily_activity) <- c("interval", "mean")
-plot(average_daily_activity$interval, average_daily_activity$mean, type = "l", col="red", lwd = 2, xlab="Interval", ylab="Average number of steps", main="Average number of steps per intervals")
-```
-##5.The 5-minute interval that, on average, contains the maximum number of steps
-```{r, echo = TRUE}
-average_daily_activity[which.max(average_daily_activity$mean), ]$interval
+library(scales)
+library(Hmisc)
 ```
 
-##6.Code to describe and show a strategy for imputing missing data
-Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
-```{r, echo = TRUE}
-sum(is.na(activity$steps))
+## Loading and preprocessing the data
+##### 1. Load the data (i.e. read.csv())
+```{r, results='markup', warning=TRUE, message=TRUE}
+if(!file.exists('activity.csv')){
+    unzip('activity.zip')
+}
+activityData <- read.csv('activity.csv')
 ```
-Devise a strategy for filling in all of the missing values in the dataset. 
-```{r, echo = TRUE}
-imputed_steps <- average_daily_activity$mean[match(activity$interval, average_daily_activity$interval)]
+##### 2. Process/transform the data (if necessary) into a format suitable for your analysis
+```{r}
+#activityData$interval <- strptime(gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", activityData$interval), format='%H:%M')
 ```
-Create a new dataset that is equal to the original dataset but with the missing data filled in.
-```{r, echo = TRUE}
 
-activity_imputed <- transform(activity, steps = ifelse(is.na(activity$steps), yes = imputed_steps, no = activity$steps))
-total_steps_imputed <- aggregate(steps ~ date, activity_imputed, sum)
-names(total_steps_imputed) <- c("date", "daily_steps")
-```
-##7Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. 
-```{r, echo = TRUE}
+-----
 
-hist(total_steps_imputed$daily_steps, col = "red", xlab = "Total steps per day", ylim = c(0,30), main = "Total number of steps taken each day", breaks = seq(0,25000,by=2500))
+## What is mean total number of steps taken per day?
+```{r}
+stepsByDay <- tapply(activityData$steps, activityData$date, sum, na.rm=TRUE)
 ```
-Mean of the total number of steps taken per day
-```{r, echo = TRUE}
-mean(total_steps_imputed$daily_steps)
-```
-median of the total number of steps taken per day:
-```{r, echo = TRUE}
-median(total_steps_imputed$daily_steps)
-```
-##8.Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
-```{r, echo = TRUE}
 
-activity$date <- as.Date(strptime(activity$date, format="%Y-%m-%d"))
-activity$datetype <- sapply(activity$date, function(x) {
-        if (weekdays(x) == "Sábado" | weekdays(x) =="Domingo") 
-                {y <- "Weekend"} else 
-                {y <- "Weekday"}
-                y
-        })
+##### 1. Make a histogram of the total number of steps taken each day
+```{r}
+qplot(stepsByDay, xlab='Total steps per day', ylab='Frequency using binwith 500', binwidth=500)
 ```
-# panel plot containing a time series plot (i.e. type = “l”) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
-```{r, echo = TRUE}
 
-activity_by_date <- aggregate(steps~interval + datetype, activity, mean, na.rm = TRUE)
-plot<- ggplot(activity_by_date, aes(x = interval , y = steps, color = datetype)) +
-       geom_line() +
-       labs(title = "Average daily steps by type of date", x = "Interval", y = "Average number of steps") +
-       facet_wrap(~datetype, ncol = 1, nrow=2)
-print(plot)
+##### 2. Calculate and report the mean and median total number of steps taken per day
+```{r}
+stepsByDayMean <- mean(stepsByDay)
+stepsByDayMedian <- median(stepsByDay)
 ```
+* Mean: `r stepsByDayMean`
+* Median:  `r stepsByDayMedian`
+
+-----
+
+## What is the average daily activity pattern?
+```{r}
+averageStepsPerTimeBlock <- aggregate(x=list(meanSteps=activityData$steps), by=list(interval=activityData$interval), FUN=mean, na.rm=TRUE)
+```
+
+##### 1. Make a time series plot
+```{r}
+ggplot(data=averageStepsPerTimeBlock, aes(x=interval, y=meanSteps)) +
+    geom_line() +
+    xlab("5-minute interval") +
+    ylab("average number of steps taken") 
+```
+
+##### 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r}
+mostSteps <- which.max(averageStepsPerTimeBlock$meanSteps)
+timeMostSteps <-  gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", averageStepsPerTimeBlock[mostSteps,'interval'])
+```
+
+* Most Steps at: `r timeMostSteps`
+
+----
+
+## Imputing missing values
+##### 1. Calculate and report the total number of missing values in the dataset 
+```{r}
+numMissingValues <- length(which(is.na(activityData$steps)))
+```
+
+* Number of missing values: `r numMissingValues`
+
+##### 2. Devise a strategy for filling in all of the missing values in the dataset.
+##### 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r}
+activityDataImputed <- activityData
+activityDataImputed$steps <- impute(activityData$steps, fun=mean)
+```
+
+
+##### 4. Make a histogram of the total number of steps taken each day 
+```{r}
+stepsByDayImputed <- tapply(activityDataImputed$steps, activityDataImputed$date, sum)
+qplot(stepsByDayImputed, xlab='Total steps per day (Imputed)', ylab='Frequency using binwith 500', binwidth=500)
+```
+
+##### ... and Calculate and report the mean and median total number of steps taken per day. 
+```{r}
+stepsByDayMeanImputed <- mean(stepsByDayImputed)
+stepsByDayMedianImputed <- median(stepsByDayImputed)
+```
+* Mean (Imputed): `r stepsByDayMeanImputed`
+* Median (Imputed):  `r stepsByDayMedianImputed`
+
+
+----
+
+## Are there differences in activity patterns between weekdays and weekends?
+##### 1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+
+```{r}
+activityDataImputed$dateType <-  ifelse(as.POSIXlt(activityDataImputed$date)$wday %in% c(0,6), 'weekend', 'weekday')
+```
+
+##### 2. Make a panel plot containing a time series plot
+
+```{r}
+averagedActivityDataImputed <- aggregate(steps ~ interval + dateType, data=activityDataImputed, mean)
+ggplot(averagedActivityDataImputed, aes(interval, steps)) + 
+    geom_line() + 
+    facet_grid(dateType ~ .) +
+    xlab("5-minute interval") + 
+    ylab("avarage number of steps")
+```
+
